# test4

./: README.md  flake8  main.py  pyproject.toml
src/: generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
